--- a/backend/readme
+++ b/backend/readme
@@ -2,3 +2,8 @@ LlmmKsEH1MNpF2R8
 arakashdeveloper
 
 
+app.use(cors({
+  origin: ['https://billmanagements.vercel.app','http://localhost:3000'],
+  methods: ['GET', 'POST'],
+  credentials: true,
+}));
